<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mutualproperty.view.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_add_property"
        android:name="com.example.mutualproperty.view.activities.AddProperties"
        android:label="@string/menu_add_property"
        tools:layout="@layout/activity_add_properties" />

    <activity
        android:id="@+id/nav_search"
        android:name="com.example.mutualproperty.view.activities.SearchActivity"
        android:label="@string/menu_search"
        tools:layout="@layout/activity_search" />

    <fragment
        android:id="@+id/nav_fav_property"
        android:name="com.example.mutualproperty.view.fragments.FavouriteFragment"
        android:label="@string/menu_favourite_properties"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mutualproperty.view.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.mutualproperty.view.fragments.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.mutualproperty.view.fragments.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />
    <activity
        android:id="@+id/nav_reg"
        android:name="com.example.mutualproperty.view.activities.Login"
        android:label="@string/create_an_account"
        tools:layout="@layout/activity_login" />
</navigation>